Add social preview thumbnail

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>spotify-visualizer</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Open Graph / Discord Embed -->
+  <title>Neon Tunes | Spotify Visualizer</title>
+  <meta name="description"
+    content="A real-time 3D synthwave visualizer for your localized Spotify playback using React Three Fiber." />
+  <meta property="og:title" content="Neon Tunes | Spotify Visualizer" />
+  <meta property="og:description" content="Watch your music come to life in a neon-soaked 3D world." />
+  <meta property="og:image" content="/thumbnail.png" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="/thumbnail.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
